# Self-DrivingDeepRLSystem

./: .gitignore  .pylintrc  CLEANUP_SUMMARY.md  ERRORS_FIXED.md  INSTALL.md  LANE_KEEPING.md  PHASE1_COMPLETE.md  PHASE1_QUICKSTART.md  QUICKSTART.md  README.md  STEP2_COMPLETE.md  STEP4_DONE.md  STEP4_SUMMARY.md  build.sh  quickstart.sh  run_server.sh  train.sh
cpp/: CMakeLists.txt
cpp/include/: SafetyShield.h  inference_engine.h  jni_bridge.h
cpp/src/: SafetyShield.cpp  inference_engine.cpp  jni_bridge.cpp  test_engine.cpp
java/: build.gradle  settings.gradle
java/src/main/java/com/selfdriving/: SelfDrivingApplication.java
java/src/main/java/com/selfdriving/api/: InferenceService.java  SelfDrivingController.java
java/src/main/java/com/selfdriving/controller/: InferenceController.java
java/src/main/java/com/selfdriving/engine/: DrivingAction.java  SelfDrivingEngine.java
java/src/main/java/com/selfdriving/model/: InferenceRequest.java  InferenceResponse.java
java/src/main/resources/: application.properties
models/: .gitkeep
python/: CHATGPT_PHASE4_RESPONSE.md  PHASE1_PYBULLET.md  PHASE2_COMPLETE.md  PHASE2_QUICKSTART.md  PHASE2_VERIFICATION.md  PHASE3_COMPLETE.md  PHASE3_QUICKSTART.md  PHASE4_COMPLETE.md  README_PROGRESSION.md  STEP3_COMPLETE.md  STEP4_COMPLETE.md  demo_phase4_systems.py  evaluate.py  export_onnx.py  export_to_onnx.py  offline_evaluation_demo.py  phase3_demo.py  pyproject.toml  record_and_playback.py  requirements.txt  stress_test_report.json  test_complete_system.py  test_lane_keeping.py  test_pybullet_env.py  train_lane_keeping.py  train_pybullet.py  train_self_driving.py  train_step3.py  visualize_step3.py
python/evaluation_reports/: evaluation_report_20251225_203732.json  evaluation_report_20251225_203834.json  evaluation_report_20251225_203843.json  evaluation_report_20251225_203857.json  evaluation_report_20251225_203922.json  evaluation_report_20251225_203929.json  evaluation_report_20251225_204033.json  evaluation_report_20251225_204044.json  evaluation_report_20251225_204153.json  evaluation_report_20251226_110302.json  evaluation_report_20251226_110313.json  evaluation_report_20251226_110426.json  evaluation_report_20251226_110711.json
python/rl/: __init__.py
python/rl/algorithms/: __init__.py  ppo.py  rollout_buffer.py
python/rl/envs/: __init__.py  lane_keeping_env.py  multi_agent_env.py  pybullet_driving_env.py  traffic_agents.py  vec_env.py  vision_wrapper.py  wrappers.py
python/rl/evaluation/: offline_evaluator.py  policy_comparison.py  stress_testing.py
python/rl/networks/: __init__.py  actor_critic.py  mlp_policy.py  policy_networks.py  vision_policy.py
python/rl/safety/: __init__.py  traffic_safety.py
python/rl/training/: curriculum.py
python/rl/utils/: __init__.py  curriculum.py  episode_playback.py  episode_recorder.py  evaluator.py  helpers.py  logger.py  scheduler.py
