[project]
name = "selfdriving-rl"
version = "1.0.0"
description = "Self-Driving Deep Reinforcement Learning System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "gymnasium[box2d]>=0.29.0",
    "opencv-python>=4.8.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "tensorboard>=2.14.0",
    "tqdm>=4.66.0",
    "cloudpickle>=3.0.0",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu>=1.16.0",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "isort>=5.12.0",
]

[project.scripts]
train = "train_self_driving:main"
evaluate = "evaluate:main"
export = "export_onnx:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
